Closed Bug 2059963 Opened 12 days ago Closed 10 hours ago

Wrong charsets in forwarded messages

Categories

(MailNews Core :: MIME, defect)

Thunderbird 153
defect

Tracking

(Not tracked)

RESOLVED FIXED
155 Branch

People

(Reporter: jiri.reischig, Assigned: maxe)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(3 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/152.0.0.0 Safari/537.36

Steps to reproduce:

forward attached message.

Actual results:

all czech characters are wrong - wrong charsets

It is OK in older version than 153. In 152 version it's OK

Expected results:

All characters are good in good charset

Jiri, are you on 153esr (ESR channel) or 153 (Release channel)?

Blocks: tb153found

Where is the encoding issue? This looks like correct Czech text:

Děčínský jez může na vodu dostat 4,5 milionu tun zboží. Logistické firmy potřebují spolehlivou vodní cestu, tvrdí Fojtů

Do dnešního dne stály asi 600 milionů korun všechny studie, výpočty a další přípravné práce, zejména tedy v souvislosti s předchozími požadavky resortu životního prostředí.

The message is encoded in UTF-8, so little room for error. Maybe there's a font issue on your machine.

I'm so sorry, you are right, when forwarding the message, all the accented characters are wrong.

I edited the last MIME part

--===============5136384883595635677==
Content-Type: text/plain; charset="utf-8" <--- Edited here
MIME-Version: 1.0
Content-Transfer-Encoding: quoted-printable
Content-Disposition: inline

_______________________________________________
Doprava-l mailing list
Doprava-l@list.ecn.cz
https://list.ecn.cz/mailman/listinfo/doprava-l

--===============5136384883595635677==--

to have utf-8 instead of iso-8859-1 and then it works.

Congrats, that is the first real regression from one of my patches in a wildly unanticipated manner.

Assignee: nobody → mozilla
Status: UNCONFIRMED → ASSIGNED
Component: Untriaged → MIME
Ever confirmed: true
Keywords: regression
Product: Thunderbird → MailNews Core
Regressed by: 2049079

Hello Jiri,

do you believe the footer in iso-8859-1 should be converted to utf-8 before merging or excluded when forwarding?

Thanks

Max

Flags: needinfo?(jiri.reischig)

I'm not there reporter, but there is nothing to convert, the last text/plain part is ASCII. Why does its declared charset affect the first part which is UTF-8? Each part should use its own charset, and of course, if combined, everything should be UTF-8. What am I missing?

(In reply to Helge H. from comment #6)

I'm not there reporter, but there is nothing to convert, the last text/plain part is ASCII. Why does its declared charset affect the first part which is UTF-8? Each part should use its own charset, and of course, if combined, everything should be UTF-8. What am I missing?

The historic behaviour is that only one text part was forwarded not multiple merged to be forwarded. This was a special case mostly for Apple Mail and their weird way of sandwiching inline pictures into plain text e-mails where any sane human would have expected html.

the last text/plain part is ASCII.

No its not, listed as iso-8859-1. By chance only ASCII-characters but still.

if combined, everything should be UTF-8.

This is certainly one viable solution, the other would be some harsher gate to restore pre-153-behaviour for this exact .eml.

Summary: Wrong charsets in frowarded messages → Wrong charsets in forwarded messages

(In reply to Max Emig [:maxe] from comment #5)

Hello Jiri,

do you believe the footer in iso-8859-1 should be converted to utf-8 before merging or excluded when forwarding?

Thanks

Max

Hello,

the footer is generated by an old mailing list management program (Mailman), and it cannot be converted to utf-8 format.

Jiri

Flags: needinfo?(jiri.reischig)

(In reply to Jiri Reischig from comment #8)

(In reply to Max Emig [:maxe] from comment #5)

Hello Jiri,

do you believe the footer in iso-8859-1 should be converted to utf-8 before merging or excluded when forwarding?

Thanks

Max

Hello,

the footer is generated by an old mailing list management program (Mailman), and it cannot be converted to utf-8 format.

Jiri

Within Thunderbird I mean? Thunderbird 152 or below just did not include it at all when forwarding.

See Also: → 2062680

Keep in mind, we also need a bug 2062680 fix for this to actually work again.

This is an uplift candidate at least for ESR 153, possibly even an 154 follow-up release if it comes to that. I give it a week of cooking in Daily before deciding what to request.

Pushed by toby@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/e34f35bb05f3
Decode later text/plain body parts with their own charsets before appending them to the forwarded body. r=mkmelin

I will close this bug once it working correctly in conjunction with a bug 2062680 fix has been proven and uplift has been decided.

Target Milestone: --- → 155 Branch

(In reply to Max Emig [:maxe] from comment #11)

Keep in mind, we also need a bug 2062680 fix for this to actually work again.

The regressor for bug 2062680 landed in version 154 (and will be backed out from 154).

This bug is in 153? Is the fix attached to this bug sufficient to fix esr153 ?

This bug is in 153? Is the fix attached to this bug sufficient to fix esr153 ?

I needed to recompile 153 with D317854 on top, the answer is yes:




-------- Forwarded Message --------
Subject: 	[Doprava] Decin = Děčínský jez může na vodu dostat 4,5 milionu tun zboží.
Date: 	Sat, 1 Aug 2026 01:24:15 +0200
From: 	Deti Zeme v Brne via Doprava-l <doprava-l@list.ecn.cz>
Reply-To: 	doprava-l@list.ecn.cz
To: 	doprava-l@list.ecn.cz <doprava-l@list.ecn.cz>
CC: 	Deti Zeme v Brne <dz.brno@ecn.cz>


Zdravim!

Zde z rozhovoru pekny vyber nazoru demagoga z RVC CR, jinak poslechnout na 20 minut.

M.Patrik

-----------------------------

Děčínský jez může na vodu dostat 4,5 milionu tun zboží. Logistické firmy potřebují spolehlivou vodní cestu, tvrdí Fojtů
31.07.2026
https://radiozurnal.rozhlas.cz/decinsky-jez-muze-na-vodu-dostat-45-milionu-tun-zbozi-logisticke-firmy-potrebuji-9633857
Tomáš Pancíř

„Zákazníci vodní dopravy potřebují mít spolehlivou vodní cestu, aby alespoň ten metr čtyřicet, který plánujeme, byl pro plavidla zajištěn, protože to je jejich ‚break even point‘, tedy hranice ekonomiky,“ říká ve Dvaceti minutách Radiožurnálu ředitel Ředitelství vodních cest Lubomír Fojtů. Jak ve věci splavnění Labe spolupracují české úřady s těmi německými? A jaké bude mít nový jez dopady na přírodu? Poslechněte si rozhovor.


- Po středečním setkání se zástupci Saska oznámil ministr životního prostředí Igor Červený (AUTO), že už za tři roky by se měl začít stavět na Labi plavební stupeň Děčín, což je projekt, o kterém se diskutuje už od 90. let minulého století. Kolik do dnešního dne stály přípravy tohoto projektu?

Do dnešního dne stály asi 600 milionů korun všechny studie, výpočty a další přípravné práce, zejména tedy v souvislosti s předchozími požadavky resortu životního prostředí.

Jez bude vysoký čtyři a půl metru a vzdutí by mělo dosahovat délky zhruba sedmi kilometrů, to znamená prakticky v celém intravilánu města Děčína. Bude obsahovat spoustu environmentálních opatření, například rybí přechody, terestriální přechody, spoustu přírodě blízkých opatření na březích, vytvoření prostoru pro lužní lesy a příbřežní mělkovodní oblasti…


- To jsou definitivní parametry výšky jezu, nebo se o tom ještě povede debata?

Teď jsme v procesu EIA, který by měl upřesnit tu specifikaci. Nicméně toto je potřeba z hlediska dopravy a z hlediska malé vodní elektrárny, která tam je, takže předpokládám, že tento parametr by se asi měnit neměl.


- Nový jez má zajistit splavnost Labe mezi Ústím nad Labem a hranicí s Německem. Kolik dní v letošním roce byl tento úsek splavný?

Přesné statistiky teď nevím. Spoustu měsíců nebyl splavný.


- Máme konec sedmého měsíce. Dá se říci, že většinu letošního roku nebyl splavný?

Ano.


- Máte rámcovou představu, jak to bylo v minulých letech?

V minulých letech byly rovněž roky, kdy se třeba půl roku nemohlo jezdit, ale v průměru jsou to maximálně dva tři měsíce v roce.


- To znamená, že ten úsek, o kterém mluvíme, většinu roku splavný je?

Ano, ale ta vodní cesta je samozřejmě velice nespolehlivá. Zákazníci vodní dopravy potřebují mít spolehlivou vodní cestu, aby alespoň ten metr čtyřicet, který plánujeme, byl pro plavidla zajištěn, protože to je jejich „break even point“, tedy hranice ekonomiky.


- Pokud se jez postaví podle parametrů tak, jak jste o nich před chvílí mluvil, jaký to bude mít efekt? Jak velkou část roku by za takových okolností byl úsek splavný?

Ten ekonomický ponor 140 centimetrů by mohl být zajištěn až 345 dní v roce, ale přesné číslo bude stanoveno během výpočtu v rámci procesu EIA.

Konkurenceschopnost vodní dopravy

- Jedna věc je splavnost Labe, druhá věc je, jestli a jaký bude o lodní dopravu v tomto úseku zájem. Říkal jste, že jste dělali marketingové výzkumy. Co vám z toho vyšlo?

Vyšlo nám, že zhruba 4,5 milionu tun je množství zboží, které by bylo možné na vodu dostat. Komunikovali jsme to se zástupci logistických organizací, především tedy se Svazem spedice a logistiky, se Svazem dopravy. A máme od jednotlivých organizací i přípis, kolik by toho zboží teoreticky mohlo být.

A samozřejmě, když z minulosti víme, které zboží tady má afinitu, tak počítáme s tím, že i toto zboží by se znovu mělo objevit. Logistické firmy to potvrzují s tím, že ale potřebují mít jistotu nebo větší spolehlivost vodní cesty. Nemají-li zaručeno alespoň těch 140 centimetrů nebo hrozí, že by mělo často docházet k výpadkům, jako tomu je teď, takže sem třeba přijedou se svou lodí a pak se nedostanou ven… Z tohoto důvodu je potřeba, aby na naší straně byla tato investice provedena.


- Jaké zboží by se nově mělo vozit?

Agrární produkty, stavební materiály a zejména těžké a nadrozměrné kusy. Věci, které jinak než po vodě přepravit nelze. Například i komponenty pro dostavbu jaderných elektráren. Mimo jiné by se mohla obnovit i výroba říčně-námořních lodí, která byla přesunuta do Číny kvůli tomu, že u nás je ta vodní cesta nespolehlivá. To jsou všechno věci, které by se mohly na vodu vrátit.


- Opravdu tyto plány považujete za reálné, když uvážíme, že Ústí nad Labem je napojené na železnici, vede tam železniční koridor, vede tam dálnice D8, má se tam stavět vysokorychlostní železnice? Bude do takové míry lodní doprava konkurenceschopná?

Konkurenceschopná určitě ano, protože vodní doprava je levnější. Navíc železnice je přetížená a víme, jaká je situace na dálnicích. Vodní doprava by mohla v tomto úseku zejména silnici odlehčit.


- Dlouho jste působil ve vedení Československé plavby labské. Považujete to i s touto zkušeností opravdu za realistické? Není namístě připustit, že svět se změnil, že koneckonců ani v České republice není dost lodí pro takovou dopravu a že to, co jsme na řekách viděli v minulosti, se už nevrátí?

Lodě tady nejsou, jsou v zahraničí, kde jsou podmínky přece jenom lepší. Ale jakmile se tady podmínky zlepší, určitě se sem vrátí. Vodní doprava má v Evropě rozhodně větší podíl než v České republice a je součástí evropské dopravní politiky přesunout zboží ze silnice na železnici a na vodu.

Takže si nemyslím, že by vodní doprava byla nějaký relikt, ale je to prostě komplementární mód, který má svoje výhody. Je sice pomalejší, ale je levnější a pro některé druhy zboží je toto rozhodující. Vodní doprava má navíc svoje výrazné přednosti tam, kde železnice ani silnice působit nemůže, a to jsou zejména těžké, nadrozměrné kusy.


- Jsou potřeba investice do německého úseku Labe? Probíhá komunikace se saskou stranou dostatečně transparentně? Jsou předpokládané náklady na stavbu jezu ve výši 8 miliard 800 milionů korun konečné? A je Dunaj-Odra-Labe definitivně mrtvý projekt? Poslechněte si celý rozhovor.

-- 

* * * * * * * * * * * * * * * * * * * * * * * * * * *
RNDr. Miroslav Patrik
Deti Zeme, Cejl 494/25, CZ - 602 00 Brno
mobil: +420-603 574 289
miroslav.patrik@ecn.cz, http://www.detizeme.cz
* * * * * * * * * * * * * * * * * * * * * * * * * * *
Pokud byl tento e-mail z adresy dz.brno@ecn.cz podepsán elektronickým podpisem, potvrďte prosím jeho doručení neprodleně. Kvalifikovaný certifikát sériového čísla 22961557 vydala PostSignum Qualified CA 4 (ověření osobních certifikátů na https://www.postsignum.cz/certifikaty_uzivatelu.html).


_______________________________________________
Doprava-l mailing list
Doprava-l@list.ecn.cz
https://list.ecn.cz/mailman/listinfo/doprava-l

Thanks

Max

Some (as it turned out) minor concerns about code style came up, hence a quick follow up with no observable behaviour changes.

Pushed by kaie@kuix.de:
https://hg.mozilla.org/comm-central/rev/b6f1464aff15
Follow up code style improvements. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 10 hours ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: