Bug 2059963 - Decode later text/plain body parts with their own charsets before appending them to the forwarded body. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D317854


--HG--
extra : git_commit : 8d6ce39553dc198e64abd2e5076125dadd0312e8